@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -Xmx1G -XX:MaxPermSize=256M -jar spigot-1.10.2.jar
+java -Xmx1024m -jar spigot-1.10.2.jar
